# graphlens-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  EVALUATION.md  LICENSE  MARKET_RESEARCH.md  README.md  Taskfile.yml  cliff.toml  pyproject.toml  ruff.toml  server.json  ty.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/design/: semantic-search.md
src/graphlens_mcp/: __init__.py  cli.py
src/graphlens_mcp/agents/: __init__.py  base.py  registry.py
src/graphlens_mcp/indexer/: __init__.py  concurrency.py  resolvers.py  semantic.py  workspace.py
src/graphlens_mcp/server/: __init__.py  mcp_server.py  models.py  tools.py
src/graphlens_mcp/skills/graphlens-navigation/: SKILL.md
src/graphlens_mcp/store/: __init__.py  schema.sql  sqlite_store.py
tests/: conftest.py
tests/integration/: test_cli.py  test_golden.py  test_semantic_tools.py  test_tools.py  test_workspace.py
tests/unit/: test_agents.py  test_models.py  test_paths.py  test_semantic.py  test_store.py  test_store_semantic.py  test_tools_status.py
website/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
website/docs/: agent-tools.md  architecture.md  commands.md  freshness.md  getting-started.md  intro.md  navigation.md
website/src/css/: custom.css
