[project]
name = "graphlens-mcp"
version = "0.1.0"
description = "Semantic code graph MCP server for coding agents"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Neko1313", email = "nikita.ribalchencko@yandex.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "click>=8.4.2",
    "fastmcp>=3.4.2",
    "graphlens[go,python,rust,typescript,php]>=0.7.0",
    "questionary>=2.0.1",
    "tomlkit>=0.15.0",
]

[project.scripts]
graphlens-mcp = "graphlens_mcp.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
# Mirrors the graphlens engine: a lint group and a test group, synced together via
# `uv sync --all-groups`. Ruff/ty config lives in ruff.toml / ty.toml (engine parity).
lint = [
    "bandit>=1.9.3",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
]

# ----------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------

[tool.bandit]
exclude_dirs = ["tests"]
# B608: the only f-string SQL builds an IN(...) from a count of '?' placeholders or a
# fixed table allowlist — never user data. Ruff's S608 (enabled via ALL) is the active
# per-site guard that will flag any genuinely unsafe new query.
skips = ["B608"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# A per-test ceiling so a single hang (e.g. a stalled DB worker) fails fast with a
# traceback instead of stalling the whole run; integration analyze stays well under it.
addopts = "-q --strict-markers --timeout=120"
markers = [
    "unit: pure tests, no external processes",
    "integration: real graphlens analyze / filesystem / CLI",
    "store: SqliteStore behavior",
    "workspace: indexing & freshness",
    "agents: agent registry (de)registration",
    "cli: command-line interface",
    "tools: MCP tool layer",
    "golden: batch == incremental invariant",
    "paths: path normalization",
]
